// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Init About 1`] = `
<div
  className="container"
>
  <div
    className="col"
  >
    <h1>
      About LA Homeless Helper
    </h1>
    <div
      className="textType"
    >
      California has the largest amount of homless in the United States, the majority being in LA County. This website links together city homeless data, homeless resource data, and medicare/medicaid data. This disparate data can be used to analyze what locations have what services, and could be used to see what locations could use more help based on homless population density. This tool is designed for people wanting to help the homeless of LA County and also a tool for homeless people to see what resources are available for them.
    </div>
  </div>
  <div
    className="MuiStack-root css-13f3otb-MuiStack-root"
  >
    <div
      className="card-group"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-rh0ti-MuiPaper-root-MuiCard-root"
      >
        <img
          className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
          height="400"
          src="jamie.jpg"
        />
        <div
          className="MuiBox-root css-i9gxme"
        >
          <div
            className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <div
              className="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1trk376-MuiTypography-root"
            >
              Jamie Wong
            </div>
            <div
              className="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-18k87ye-MuiTypography-root"
            >
              Frontend Developer
            </div>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
            >
              Im a senior computer science student at UT Austin. I'm from Houston, Texas and I like to read and play poker
            </p>
          </div>
        </div>
        <div
          className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        >
          <div
            className="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          >
            Number of Commits: 
            0
          </div>
          <div
            className="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          >
            Number of Issues: 
            0
          </div>
        </div>
      </div>
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-rh0ti-MuiPaper-root-MuiCard-root"
      >
        <img
          className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
          height="400"
          src="sydney.jpg"
        />
        <div
          className="MuiBox-root css-i9gxme"
        >
          <div
            className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <div
              className="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1trk376-MuiTypography-root"
            >
              Sydney Schrader
            </div>
            <div
              className="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-18k87ye-MuiTypography-root"
            >
              Frontend Developer
            </div>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
            >
              I'm a Junior from Austin, TX. I like to go to Barton Springs and read in my free time.
            </p>
          </div>
        </div>
        <div
          className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        >
          <div
            className="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          >
            Number of Commits: 
            0
          </div>
          <div
            className="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          >
            Number of Issues: 
            0
          </div>
        </div>
      </div>
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-rh0ti-MuiPaper-root-MuiCard-root"
      >
        <img
          className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
          height="400"
          src="zach.jpg"
        />
        <div
          className="MuiBox-root css-i9gxme"
        >
          <div
            className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <div
              className="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1trk376-MuiTypography-root"
            >
              Zachary Voltz
            </div>
            <div
              className="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-18k87ye-MuiTypography-root"
            >
              Backend Developer
            </div>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
            >
              I'm a senior CS student from Houston, Texas, and I've been programming since I was 9. Outside of programming, I like to read manga and rock climb
            </p>
          </div>
        </div>
        <div
          className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        >
          <div
            className="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          >
            Number of Commits: 
            0
          </div>
          <div
            className="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          >
            Number of Issues: 
            0
          </div>
        </div>
      </div>
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-rh0ti-MuiPaper-root-MuiCard-root"
      >
        <img
          className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
          height="400"
          src="pavan.jpg"
        />
        <div
          className="MuiBox-root css-i9gxme"
        >
          <div
            className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <div
              className="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1trk376-MuiTypography-root"
            >
              Pavan Marathi
            </div>
            <div
              className="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-18k87ye-MuiTypography-root"
            >
              Backend Developer
            </div>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
            >
              I'm a Junior from Houston, TX. I enjoy rock climbing and board games in my spare time.
            </p>
          </div>
        </div>
        <div
          className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        >
          <div
            className="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          >
            Number of Commits: 
            0
          </div>
          <div
            className="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          >
            Number of Issues: 
            0
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col"
  >
    <div
      className="MuiStack-root css-1co5bop-MuiStack-root"
    >
      <div
        className="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1trk376-MuiTypography-root"
      >
        LA Homeless Helper API Sources
      </div>
    </div>
    <div
      className="MuiStack-root css-pji5sw-MuiStack-root"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-t4rqyz-MuiPaper-root-MuiCard-root"
      >
        <img
          className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
          height="140"
          src="arcadia.jpg"
          width="140"
        />
        <div
          className="MuiBox-root css-i9gxme"
        >
          <div
            className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <div
              className="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1trk376-MuiTypography-root"
            >
              City Data
            </div>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
            >
              Api we used to get city data
            </p>
          </div>
        </div>
        <div
          className="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
        >
          <a
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
            href="https://geohub.lacity.org/datasets/lacounty::homeless-counts-2020/explore?location=33.759300%2C-117.328488%2C8.29&showTable=true"
            onBlur={[Function]}
            onFocus={[Function]}
            rel="noopener"
            target="_blank"
          >
            Go to 
            City Data
          </a>
        </div>
      </div>
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-t4rqyz-MuiPaper-root-MuiCard-root"
      >
        <img
          className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
          height="140"
          src="volunteer.jpg"
          width="140"
        />
        <div
          className="MuiBox-root css-i9gxme"
        >
          <div
            className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <div
              className="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1trk376-MuiTypography-root"
            >
              Resource Data
            </div>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
            >
              Api we used to get resource data
            </p>
          </div>
        </div>
        <div
          className="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
        >
          <a
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
            href="https://geohub.lacity.org/datasets/lacounty::homeless-shelters-and-services/api"
            onBlur={[Function]}
            onFocus={[Function]}
            rel="noopener"
            target="_blank"
          >
            Go to 
            Resource Data
          </a>
        </div>
      </div>
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-t4rqyz-MuiPaper-root-MuiCard-root"
      >
        <img
          className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
          height="140"
          src="ssa.jpg"
          width="140"
        />
        <div
          className="MuiBox-root css-i9gxme"
        >
          <div
            className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <div
              className="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1trk376-MuiTypography-root"
            >
              Medical Data
            </div>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
            >
              Api we used to get medical locations
            </p>
          </div>
        </div>
        <div
          className="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
        >
          <a
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
            href="https://geohub.lacity.org/datasets/lacounty::medicare-and-medicaid-offices/api"
            onBlur={[Function]}
            onFocus={[Function]}
            rel="noopener"
            target="_blank"
          >
            Go to 
            Medical Data
          </a>
        </div>
      </div>
    </div>
    <div
      className="MuiStack-root css-1co5bop-MuiStack-root"
    >
      <div
        className="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1trk376-MuiTypography-root"
      >
        Tools
      </div>
    </div>
    <div
      className="MuiStack-root css-pji5sw-MuiStack-root"
    >
      <div
        className="card-group"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1r5po6n-MuiPaper-root-MuiCard-root"
        >
          <img
            className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
            height="200"
            src="gitlabPic.png"
            width="100"
          />
          <div
            className="MuiBox-root css-0"
          >
            <div
              className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
            >
              <div
                className="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter MuiTypography-gutterBottom css-68fhrh-MuiTypography-root"
              >
                Gitlab
              </div>
              <p
                className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
              >
                Development Platform
              </p>
            </div>
          </div>
          <div
            className="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
          >
            <a
              className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
              href="https://gitlab.com/sydneyschrader/cs373-idb-01"
              onBlur={[Function]}
              onFocus={[Function]}
              rel="noopener"
              target="_blank"
            >
              Go to 
              Gitlab
            </a>
          </div>
        </div>
        <div
          className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1r5po6n-MuiPaper-root-MuiCard-root"
        >
          <img
            className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
            height="200"
            src="React-icon.jpg"
            width="100"
          />
          <div
            className="MuiBox-root css-0"
          >
            <div
              className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
            >
              <div
                className="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter MuiTypography-gutterBottom css-68fhrh-MuiTypography-root"
              >
                React
              </div>
              <p
                className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
              >
                Web UI Library
              </p>
            </div>
          </div>
          <div
            className="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
          >
            <a
              className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
              href="https://react.dev/"
              onBlur={[Function]}
              onFocus={[Function]}
              rel="noopener"
              target="_blank"
            >
              Go to 
              React
            </a>
          </div>
        </div>
        <div
          className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1r5po6n-MuiPaper-root-MuiCard-root"
        >
          <img
            className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
            height="200"
            src="bootstrapPic.jpg"
            width="100"
          />
          <div
            className="MuiBox-root css-0"
          >
            <div
              className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
            >
              <div
                className="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter MuiTypography-gutterBottom css-68fhrh-MuiTypography-root"
              >
                Bootstrap
              </div>
              <p
                className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
              >
                CSS Framework
              </p>
            </div>
          </div>
          <div
            className="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
          >
            <a
              className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
              href="https://getbootstrap.com/"
              onBlur={[Function]}
              onFocus={[Function]}
              rel="noopener"
              target="_blank"
            >
              Go to 
              Bootstrap
            </a>
          </div>
        </div>
        <div
          className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1r5po6n-MuiPaper-root-MuiCard-root"
        >
          <img
            className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
            height="200"
            src="flaskPic.jpg"
            width="100"
          />
          <div
            className="MuiBox-root css-0"
          >
            <div
              className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
            >
              <div
                className="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter MuiTypography-gutterBottom css-68fhrh-MuiTypography-root"
              >
                Flask
              </div>
              <p
                className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
              >
                Micro Web Framework
              </p>
            </div>
          </div>
          <div
            className="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
          >
            <a
              className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
              href="https://flask.palletsprojects.com/en/3.0.x/"
              onBlur={[Function]}
              onFocus={[Function]}
              rel="noopener"
              target="_blank"
            >
              Go to 
              Flask
            </a>
          </div>
        </div>
        <div
          className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1r5po6n-MuiPaper-root-MuiCard-root"
        >
          <img
            className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
            height="200"
            src="sqlAlchPic.jpg"
            width="100"
          />
          <div
            className="MuiBox-root css-0"
          >
            <div
              className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
            >
              <div
                className="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter MuiTypography-gutterBottom css-68fhrh-MuiTypography-root"
              >
                SQLAlchemy
              </div>
              <p
                className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
              >
                SQL Toolkit
              </p>
            </div>
          </div>
          <div
            className="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
          >
            <a
              className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
              href="https://www.sqlalchemy.org/"
              onBlur={[Function]}
              onFocus={[Function]}
              rel="noopener"
              target="_blank"
            >
              Go to 
              SQLAlchemy
            </a>
          </div>
        </div>
        <div
          className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1r5po6n-MuiPaper-root-MuiCard-root"
        >
          <img
            className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
            height="200"
            src="postmanPic.jpg"
            width="100"
          />
          <div
            className="MuiBox-root css-0"
          >
            <div
              className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
            >
              <div
                className="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter MuiTypography-gutterBottom css-68fhrh-MuiTypography-root"
              >
                Postman
              </div>
              <p
                className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
              >
                API documentation
              </p>
            </div>
          </div>
          <div
            className="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
          >
            <a
              className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
              href="https://documenter.getpostman.com/view/28474521/2s9YJZ3jad"
              onBlur={[Function]}
              onFocus={[Function]}
              rel="noopener"
              target="_blank"
            >
              Go to 
              Postman
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Init App 1`] = `
Array [
  <nav
    className="navbar"
  >
    <div
      className="links-container"
    >
      <div
        className="link"
      >
        <a
          href="/home"
        >
          Home
        </a>
      </div>
      <div
        className="link"
      >
        <a
          href="/about"
        >
          About
        </a>
      </div>
      <div
        className="link"
      >
        <a
          href="/search"
        >
          Search
        </a>
      </div>
      <div
        className="link"
      >
        <a
          href="/cities"
        >
          Cities
        </a>
      </div>
      <div
        className="link"
      >
        <a
          href="/resources"
        >
          Resources
        </a>
      </div>
      <div
        className="link"
      >
        <a
          href="/medical"
        >
          Medical
        </a>
      </div>
    </div>
  </nav>,
  <div
    className="background"
  >
    <div
      className="title-container"
    >
      <h1
        className="title"
      >
        Los Angeles 
        <br />
         Homeless Helper
      </h1>
    </div>
    <div
      className="card-container container"
    >
      <div
        className="row"
      >
        <div
          className="col"
        >
          <div
            className="card"
            style={
              Object {
                "alignItems": "center",
              }
            }
          >
            <div
              className="header-1 card-title h5"
            >
              <b>
                Cities
              </b>
            </div>
            <img
              alt=""
              className="card-image-top"
              src="cities-image.jpg"
              style={
                Object {
                  "width": "100%",
                }
              }
            />
            <div
              className="card-body"
            >
              <a
                className="card-link btn btn-primary"
                disabled={false}
                href="/cities"
                name="homeCities"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                Explore Cities in LA
              </a>
            </div>
          </div>
        </div>
        <div
          className="col"
        >
          <div
            className="card"
            style={
              Object {
                "alignItems": "center",
              }
            }
          >
            <div
              className="header-1 card-title h5"
            >
              <b>
                Resources
              </b>
            </div>
            <img
              alt=""
              className="card-image-top"
              src="resources-image.jpg"
              style={
                Object {
                  "width": "90%",
                }
              }
            />
            <div
              className="card-body"
            >
              <a
                className="card-link btn btn-primary"
                disabled={false}
                href="/resources"
                name="homeResources"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                Explore Resources
              </a>
            </div>
          </div>
        </div>
        <div
          className="col"
        >
          <div
            className="card"
            style={
              Object {
                "alignItems": "center",
              }
            }
          >
            <div
              className="header-1 card-title h5"
            >
              <b>
                Medical
              </b>
            </div>
            <img
              alt=""
              className="card-image-top"
              src="medicare-image.jpg"
              style={
                Object {
                  "width": "100%",
                }
              }
            />
            <div
              className="card-body"
            >
              <a
                className="card-link btn btn-primary"
                disabled={false}
                href="/medical"
                name="homeMedical"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                Explore Medical Options
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Init City 1`] = `
<div
  className="box card"
  style={
    Object {
      "alignItems": "center",
      "padding": "0 10px",
      "width": "18rem",
    }
  }
>
  <div
    className="header-1 card-title h5"
  >
    <b />
  </div>
  <img
    className="card-image-top"
    onError={[Function]}
    src="arcadia.jpg"
    style={
      Object {
        "width": "100%",
      }
    }
  />
  <div
    className="text-center card-body"
  >
    <p>
      Unsheltered population: 
       
      <br />
      Sheltered population: 
       
      <br />
      Total homeless population: 
       
      <br />
      Square miles of city: 
      <br />
      Density of total homeless population: 
    </p>
    <a
      className="card-link  btn btn-primary"
      disabled={false}
      href="/cities/undefined"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      View 
    </a>
  </div>
</div>
`;

exports[`Init Medicare 1`] = `
<div
  className="box card"
  style={
    Object {
      "alignItems": "center",
      "width": "18rem",
    }
  }
>
  <div
    className="header-1 card-title h5"
  >
    <b />
  </div>
  <img
    className="card-image-top"
    onError={[Function]}
    src="ssa.jpg"
    style={
      Object {
        "width": "100%",
      }
    }
  />
  <div
    className="card-body"
  >
    <p>
      Name: 
       
      <br />
      Address: 
       
      <br />
      Hours: 
       
      <br />
      Phone number: 
      <br />
      City: 
    </p>
    <a
      className="card-link btn btn-primary"
      disabled={false}
      href="/medical/undefined"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      View 
    </a>
  </div>
</div>
`;

exports[`Init NavBar 1`] = `
<nav
  className="navbar"
>
  <div
    className="links-container"
  >
    <div
      className="link"
    >
      <a
        href="/home"
      >
        Home
      </a>
    </div>
    <div
      className="link"
    >
      <a
        href="/about"
      >
        About
      </a>
    </div>
    <div
      className="link"
    >
      <a
        href="/search"
      >
        Search
      </a>
    </div>
    <div
      className="link"
    >
      <a
        href="/cities"
      >
        Cities
      </a>
    </div>
    <div
      className="link"
    >
      <a
        href="/resources"
      >
        Resources
      </a>
    </div>
    <div
      className="link"
    >
      <a
        href="/medical"
      >
        Medical
      </a>
    </div>
  </div>
</nav>
`;

exports[`Init Resource 1`] = `
<div
  className="box card"
  style={
    Object {
      "alignItems": "center",
      "width": "18rem",
    }
  }
>
  <div
    className="header-1 card-title h5"
  >
    <b />
  </div>
  <img
    className="card-image-top"
    onError={[Function]}
    src="volunteer.jpg"
    style={
      Object {
        "width": "100%",
      }
    }
  />
  <div
    className="card-body"
  >
    <p>
      Name: 
       
      <br />
      Address: 
       
      <br />
      Hours: 
       
      <br />
      Zip Code: 
      <br />
      <a
        href="#"
      >
        Website not available
      </a>
    </p>
    <a
      className="card-link btn btn-primary"
      disabled={false}
      href="/resources/undefined"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      View 
    </a>
  </div>
</div>
`;
